added portfolio photos

--- a/src/app/digitals/digitals.component.html
+++ b/src/app/digitals/digitals.component.html
@@ -1,1 +1,56 @@
-<p>digitals works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img src="assets/images/digitals/1.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/digitals/2.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/digitals/4.jpg" class="img-fluid">
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col">
+      <img src="assets/images/digitals/3.jpg" class="img-fluid">
+    </div>
+    <div class="col measurements-section">
+      <h6 class="text-center">
+        Height: 180 cm
+      </h6>
+      <h6 class="text-center">
+        Bust: 88 cm
+      </h6>
+      <h6 class="text-center">
+        Waist: 65 cm
+      </h6>
+      <h6 class="text-center">
+        Bust: 88 cm
+      </h6>
+      <h6 class="text-center">
+        Waist: 65 cm
+      </h6>
+      <h6 class="text-center">
+        Hips: 95 cm
+      </h6>
+      <h6 class="text-center">
+        Dress Size: 36/S/8
+      </h6>
+      <h6 class="text-center">
+        Shoe Size: 41/8
+      </h6>
+      <h6 class="text-center">
+        Eye Colour: Brown
+      </h6>
+      <h6 class="text-center">
+        Hair Colour: Black
+      </h6>
+      <h6 class="text-center">
+        Date of Birth: 14/08/1994
+      </h6>
+      <h6 class="text-center">
+        Citizenship: British/Romanian
+      </h6>
+    </div>
+  </div>
+</div>
