--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,44 @@
-<p>home works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img src="assets/images/home/1.jpg" class="img-fluid">
+    </div>
+    <div class="col intro-section">
+        <h1 class="text-center">
+          Hi, I am Indira!
+        </h1>
+      <p class="text-center">
+        MODEL | CONTENT CREATOR | POLE DANCER | MORE
+      </p>
+      <h6 class="text-center">
+        <i class="bi bi-geo-alt-fill"></i>
+        London, UK
+      </h6>
+        <p class="text-center mx-5 mt-5">
+          I am a model based in London who specializes in editorial and beauty shots and has a strong interest in creativity & high fashion.
+        </p>
+        <p class="text-center mx-5 mt-5">
+          I celebrate and love my identity as a model, pole dancer, and software developer who indulges in all types of creative hobbies and movement expressions.
+        </p>
+    </div>
+  </div>
+  <div class="row story-row">
+    <div class="col">
+      <p>I grew up in Romania as a very active kid with many passions:fashion, beauty, dancing, singing, and being in front of the camera. I come from a poor family, and since creative jobs used to pay next to nothing, I have always been force-taught that these must always remain hobbies. This is why, when I had the opportunity to try modeling as a teenager in Bucharest and was offered a 5-year contract, I had to refuse it.</p>
+      <br>
+      <p>I re-purposed my time and energy towards leaving the country for a better future. After completing a Computer Science Degree in Manchester, I landed a Software Developer job at one of the investment banks in London. Itried to fitin by inhibiting my passions. This reached a tipping point during the pandemic when all these soul shortcomings have grown into depression.</p>
+    </div>
+    <div class="col">
+      <p>Everything was amplified when I developed a rare health condition, Sphincter of Oddi Dysfunction, which causes me episodes of excruciating pain. With this push from my body, I resumed nurturing my hobbies. Now, I want to take this further into a fully-fledged modeling career.</p>
+      <br>
+      <p>My goal is to show myself and the world that with determination, you can become a successful model at any age. Furthermore, I would like to draw from my experience and promote healthy standards in a historically flawed industry. I was told even when I was at my skinniest that I was too muscular for high fashio</p>
+      <br>
+      <p>
+        I want the young girls looking at me to have an example of a sustainable and balanced lifestyle. I want to be part of a shift towards achieving our ideal body by finding the best type of movement and diet choices that fuel our souls and don't feel like a punishment.
+      </p>
+    </div>
+    <div class="col">
+        <img src="assets/images/home/2.jpg" class="img-fluid">
+    </div>
+  </div>
+</div>
