--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,51 @@
-<p>portfolio works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img src="assets/images/portfolio/marina/dress/1.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/dress/2.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/dress/3.jpg" class="img-fluid">
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col">
+      <img src="assets/images/portfolio/marta/marta.jpg" class="img-fluid">
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col">
+      <img src="assets/images/portfolio/marina/jeans/1.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/jeans/2.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/jeans/3.jpg" class="img-fluid">
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col">
+      <img src="assets/images/portfolio/marina/white/1.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/white/2.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/white/3.jpg" class="img-fluid">
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col">
+      <img src="assets/images/portfolio/marina/bw/1.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/bw/2.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/images/portfolio/marina/bw/3.jpg" class="img-fluid">
+    </div>
+  </div>
+</div>
