--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col">
       <img src="assets/images/portfolio/marina/dress/1.jpg" class="img-fluid">
@@ -46,6 +46,17 @@
     </div>
     <div class="col">
       <img src="assets/images/portfolio/marina/bw/3.jpg" class="img-fluid">
+    </div>
+  </div>
+  <div class="row mt-5 mb-5">
+    <div class="col">
+      <img src="../../assets/images/portfolio/maha/3.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="../../assets/images/portfolio/maha/2.jpg" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="../../assets/images/portfolio/maha/1.jpg" class="img-fluid">
     </div>
   </div>
 </div>
