--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,40 @@
-<div class="container">
-  <header
-    class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
-  >
-    <a
-      [routerLink]="['/home']"
-      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-    >
-      <svg class="bi me-2" width="40" height="32">
-        <use xlink:href="#bootstrap"></use>
-      </svg>
-      <span class="fs-4">INDIRA</span>
-    </a>
-
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a
-          [routerLink]="['/portfolio']"
-          [routerLinkActive]="'active'"
-          class="nav-link"
-          aria-current="page"
-          >Portfolio</a
-        >
-      </li>
-      <li class="nav-item">
-        <a
-          [routerLink]="['/digitals']"
-          [routerLinkActive]="'active'"
-          class="nav-link"
-          aria-current="page"
-          >Digitals</a
-        >
-      </li>
-      <li class="nav-item">
-        <a
-          [routerLink]="['/contact']"
-          [routerLinkActive]="'active'"
-          class="nav-link"
-          aria-current="page"
-          >Contact</a
-        >
-      </li>
-    </ul>
-  </header>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg" style="background-color: white;">
+    <div class="container-fluid">
+      <a class="navbar-brand fs-4" href="/">INDIRA</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-2 mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                [routerLink]="['/portfolio']"
+                [routerLinkActive]="'active'"
+                class="nav-link"
+                aria-current="page"
+              >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/digitals']"
+                [routerLinkActive]="'active'"
+                class="nav-link"
+                aria-current="page"
+              >Digitals</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/contact']"
+                [routerLinkActive]="'active'"
+                class="nav-link"
+                aria-current="page">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  </nav>
 </div>
 <router-outlet></router-outlet>
