--- a/src/app/digitals/digitals.component.html
+++ b/src/app/digitals/digitals.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col">
       <img src="assets/images/digitals/1.jpg" class="img-fluid">
@@ -10,7 +10,7 @@
       <img src="assets/images/digitals/4.jpg" class="img-fluid">
     </div>
   </div>
-  <div class="row mt-5">
+  <div class="row mt-4">
     <div class="col">
       <img src="assets/images/digitals/3.jpg" class="img-fluid">
     </div>
