made it a bit more responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,33 +3,38 @@
     <div class="col">
       <img src="assets/images/home/1.jpg" class="img-fluid">
     </div>
-    <div class="col intro-section">
-        <h1 class="text-center">
+    <div class="col text-center mt-auto mb-auto">
+        <p class="h3">
           Hi, I am Indira!
-        </h1>
-      <p class="text-center">
+        </p>
+      <p>
         MODEL | CONTENT CREATOR | POLE DANCER | MORE
       </p>
-      <h6 class="text-center">
+      <p class="h6">
         <i class="bi bi-geo-alt-fill"></i>
         London, UK
-      </h6>
-        <p class="text-center mx-5 mt-5">
-          I am a model based in London who specializes in editorial and beauty shots and has a strong interest in creativity & high fashion.
-        </p>
-        <p class="text-center mx-5 mt-5">
-          I celebrate and love my identity as a model, pole dancer, and software developer who indulges in all types of creative hobbies and movement expressions.
-        </p>
+      </p>
     </div>
   </div>
-  <div class="row mb-5">
-    <div class="col">
+  <div class="row mt-3 text-center">
+    <p>
+      I specialize in editorial and beauty shots and have a strong interest in creativity & high fashion.
+    </p>
+    <p>
+      I celebrate and love my multi-faceted identity as a model, pole dancer, and software developer (yes, I built this website!).
+    </p>
+    <p>
+      In indulge in all types of creative hobbies and movement expressions.
+    </p>
+  </div>
+  <div class="row mb-3">
+    <div class="col-sm">
       <img src="assets/images/home/2.jpg" class="img-fluid">
     </div>
-    <div class="col">
-      <h5 class="text-center mt-5 mb-5">
+    <div class="col-sm">
+      <p class="h5" class="text-center mt-2 mb-2">
         MY STORY
-      </h5>
+      </p>
       <p>I grew up in Romania as a very active kid with many passions:fashion, beauty, dancing, singing, and being in front of the camera. I come from a poor family, and since creative jobs used to pay next to nothing, I have always been force-taught that these must always remain hobbies. This is why, when I had the opportunity to try modeling as a teenager in Bucharest and was offered a 5-year contract, I had to refuse it.</p>
       <br>
       <p>I re-purposed my time and energy towards leaving the country for a better future. After completing a Computer Science Degree in Manchester, I landed a Software Developer job at one of the investment banks in London. I tried to fit in by inhibiting my passions. This reached a tipping point during the pandemic when all these soul shortcomings have grown into depression.</p>
