--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,32 +1,42 @@
 <div class="container-fluid">
-  <h1 class="text-center">
-    LET'S WORK TOGETHER
-  </h1>
-  <br>
+  <h1 class="text-center">LET'S WORK TOGETHER!</h1>
+  <br />
   <p class="text-center">
-    I am open to collaborations. If you have any shoot proposal, inquiry, suggestion, feel free to reach out to me.
+    I am open to collaborations. If you have any shoot proposal, inquiry,
+    suggestion, feel free to reach out to me.
   </p>
   <p class="text-center">
-    To do so, please use the following email: <a href="mailto:indirathemodel@gmail.com">indirathemodel@gmail.com</a>
+    To do so, please use the following email:
+    <a href="mailto:indirathemodel@gmail.com">indirathemodel@gmail.com</a>
   </p>
   <p class="text-center">
-    I strive to provide timely and helpful responses to all inquiries, but please allow 24-48 hours for a response.
+    I strive to provide timely and helpful responses to all inquiries, but
+    please allow 24-48 hours for a response.
   </p>
-  <p class="text-center">
-    Feel free to also connect with me on social media!
-  </p>
+  <p class="text-center">Feel free to also connect with me on social media!</p>
   <p class="text-center">
     <a href="https://www.instagram.com/indira.vtm/">
-      <img alt="Instagram" fetchpriority="high" src="https://static.wixstatic.com/media/11062b_55e4be1e75564866b6c28290f9a9d271~mv2.png/v1/fill/w_25,h_25,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_55e4be1e75564866b6c28290f9a9d271~mv2.png" style="width: 25px; height: 25px; object-fit: cover;">
+      <img
+        alt="Instagram"
+        fetchpriority="high"
+        src="https://static.wixstatic.com/media/11062b_55e4be1e75564866b6c28290f9a9d271~mv2.png/v1/fill/w_25,h_25,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_55e4be1e75564866b6c28290f9a9d271~mv2.png"
+        style="width: 25px; height: 25px; object-fit: cover"
+      />
     </a>
     <a href="https://www.tiktok.com/@bitchimindira">
-      <img alt="TikTok" fetchpriority="high" src="https://static.wixstatic.com/media/11062b_69d309d6dbde492fae325fb0deca6556~mv2.png/v1/fill/w_25,h_25,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_69d309d6dbde492fae325fb0deca6556~mv2.png" style="width: 25px; height: 25px; object-fit: cover;">
+      <img
+        alt="TikTok"
+        fetchpriority="high"
+        src="https://static.wixstatic.com/media/11062b_69d309d6dbde492fae325fb0deca6556~mv2.png/v1/fill/w_25,h_25,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_69d309d6dbde492fae325fb0deca6556~mv2.png"
+        style="width: 25px; height: 25px; object-fit: cover"
+      />
     </a>
   </p>
   <div class="ig-section">
-    <!-- Place <div> tag where you want the feed to appear -->
     <div id="curator-feed-default-feed-layout">
-      <a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a>
+      <a href="https://curator.io" target="_blank" class="crt-logo crt-tag"
+        >Powered by Curator.io</a
+      >
     </div>
   </div>
 </div>
