--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,54 +1,57 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <img src="assets/images/home/1.jpg" class="img-fluid">
+      <img src="assets/images/home/1.jpg" class="img-fluid" />
     </div>
     <div class="col text-center mt-auto mb-auto">
-        <p class="h3">
-          Hi, I am Indira!
-        </p>
-      <p>
-        MODEL | CONTENT CREATOR | POLE DANCER | MORE
-      </p>
+      <p class="h3">Hi, I am Indira!</p>
+      <p>MODEL | CONTENT CREATOR | POLE DANCER | MORE</p>
       <p class="h6">
         <i class="bi bi-geo-alt-fill"></i>
         London, UK
+      </p>
+      <p class="mt-2">
+        <a href="/portfolio" type="button" class="btn btn-primary">Portfolio</a>
       </p>
     </div>
   </div>
   <div class="row mt-3 text-center">
     <p>
-      I specialize in editorial and beauty shots and have a strong interest in creativity & high fashion.
+      I specialize in editorial and beauty shots and have a strong interest in
+      creativity & high fashion.
     </p>
     <p>
-      I celebrate and love my multi-faceted identity as a model, pole dancer, and software developer (yes, I built this website!).
+      I celebrate and love my multi-faceted identity as a model, pole dancer,
+      and software developer (yes, I built this website!).
     </p>
-    <p>
-      In indulge in all types of creative hobbies and movement expressions.
-    </p>
+    <p>I indulge in all types of creative hobbies and movement expressions.</p>
   </div>
   <div class="row mb-3">
     <div class="col-sm">
-      <img src="assets/images/home/2.jpg" class="img-fluid">
+      <img src="assets/images/home/2.jpg" class="img-fluid" />
     </div>
-    <div class="col-sm">
-      <p class="h5" class="text-center mt-2 mb-2">
-        MY STORY
-      </p>
-      <p>I grew up in Romania as a very active kid with many passions:fashion, beauty, dancing, singing, and being in front of the camera. I come from a poor family, and since creative jobs used to pay next to nothing, I have always been force-taught that these must always remain hobbies. This is why, when I had the opportunity to try modeling as a teenager in Bucharest and was offered a 5-year contract, I had to refuse it.</p>
-      <br>
-      <p>I re-purposed my time and energy towards leaving the country for a better future. After completing a Computer Science Degree in Manchester, I landed a Software Developer job at one of the investment banks in London. I tried to fit in by inhibiting my passions. This reached a tipping point during the pandemic when all these soul shortcomings have grown into depression.</p>
-      <br>
-      <p>Everything was amplified when I developed a rare health condition, Sphincter of Oddi Dysfunction, which causes me episodes of excruciating pain. With this push from my body, I resumed nurturing my hobbies. Now, I want to take this further into a fully-fledged modeling career.</p>
-      <br>
-      <p>My goal is to show myself and the world that with determination, you can become a successful model at any age. Furthermore, I would like to draw from my experience and promote healthy standards in a historically flawed industry. I was told even when I was at my skinniest that I was too muscular for high fashion.</p>
-      <br>
+    <div class="col-sm text-center">
+      <p class="h5" class="mt-2 mb-2">MY STORY</p>
+
       <p>
-        I want the young girls looking at me to have an example of a sustainable and balanced lifestyle. I want to be part of a shift towards achieving our ideal body by finding the best type of movement and diet choices that fuel our souls and don't feel like a punishment.
+        I grew up in Romania as a very active kid with many interests: fashion,
+        beauty, dancing, singing, and being in front of the camera. Due to my
+        circumstances, I built a career as a software developer, quite
+        antithetical to my passions.
+      </p>
+      <br />
+      <p>
+        After modelling as a hobby for 10 years, I am currently working on
+        building my professional modelling career.
+      </p>
+      <br />
+      <p>
+        My goal is to show myself and the world that with determination, you can
+        become a successful model at any age.
       </p>
     </div>
     <div class="col">
-        <img src="assets/images/home/3.jpg" class="img-fluid">
+      <img src="assets/images/home/3.jpg" class="img-fluid" />
     </div>
   </div>
 </div>
